a3 fixed alignment

--- a/public/tuiter/bookmarks.css
+++ b/public/tuiter/bookmarks.css
@@ -110,7 +110,7 @@
 }
 
 .wd-icon-number {
-  margin-right: 100px;`
+  margin-right: 100px;
   margin-top: 12px;
   float: left;
   color:grey;
